--- a/css/styles.css
+++ b/css/styles.css
@@ -3,5 +3,24 @@
   text-transform:uppercase;
   font-size:30px;
   background-color:sandybrown;
+  padding:40px 20px;
+  font-style:italic;
+  
 }
-#
+#welcome{
+  background-image: url("../images/p4.jpeg");
+  background-repeat:no-repeat;
+  background-position: cover;
+  text-align:center;
+  color:#fff;
+  width:100%;
+  height:450px;
+  background-size:cover;
+  padding-top:200px;
+  
+}
+#menu{
+  text-align:center;
+  padding-top:50px;
+  background-color: sandybrown;
+}
