--- a/css/styles.css
+++ b/css/styles.css
@@ -37,3 +37,26 @@
   padding-right:30px;
   padding-left:30px;
 }
+#order{
+  text-align:center;
+}
+#contact{
+  text-align:center;
+}
+table{
+  margin-top:40px;
+  margin-left:400px;
+  margin-bottom:40px;
+}
+#c1{
+  padding-left:20px;
+}
+#c2{
+  padding-left:20px;
+}
+#c3{
+  padding-left:20px;
+}
+#c4{
+  padding-left:20px;
+}
